<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/lblNombre_Apellido"
        android:layout_width="362dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="@dimen/fab_margin"
        android:text="@string/Nombre_Apellido"
        android:textAppearance="?android:textAppearanceMedium"
        />
    <EditText
        android:id="@+id/txtNombre_Apellido"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:hint="@string/hintNombre_Apellido"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/lblNombre_Apellido"/>

    <TextView
        android:id="@+id/lblCedula"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:padding="@dimen/fab_margin"
        android:text="@string/Cedula"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/txtNombre_Apellido"/>

    <EditText
        android:id="@+id/txtCedula"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:hint="@string/hintCedula"
        android:layout_below="@id/txtNombre_Apellido"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/lblCedula"/>
    <TextView
        android:id="@+id/lblCodigo"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:layout_below="@+id/txtCedula"
        android:padding="@dimen/fab_margin"
        android:text="@string/Codigo"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="MissingConstraints"
        />
    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:hint="@string/hintCodigo"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/lblCodigo"/>
    <TextView
        android:id="@+id/lblDepartamento"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:layout_below="@+id/txtCodigo"
        android:padding="@dimen/fab_margin"
        android:text="@string/Departamento"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="MissingConstraints"
        />
    <EditText
        android:id="@+id/txtDepartamento"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:hint="@string/hintDepartamento"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/txtCodigo"
        android:layout_toRightOf="@+id/lblDepartamento"/>
    <TextView
        android:id="@+id/lblTelefono"
        android:layout_width="300dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:layout_below="@+id/txtDepartamento"
        android:padding="@dimen/fab_margin"
        android:text="@string/Telefono"
        android:textAppearance="?android:textAppearanceMedium"
        tools:ignore="MissingConstraints"/>
    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:hint="@string/hintTelefono"
        tools:ignore="MissingConstraints"
        android:layout_below="@+id/lblTelefono"/>
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTelefono"
        android:layout_marginTop="51dp"
        android:text="@string/Guardar"
        tools:ignore="MissingConstraints"
/>


</RelativeLayout>